# saw_rl

./: .gitattributes
saw_rl_pkg 2/: .claudeignore  CLAUDE.md  benchmark.py  pyproject.toml  test_env.py
saw_rl_pkg 2/data/: adsb2_rapor.txt  adsb2_rapor_saw_arrivals.csv  adsb2_rapor_saw_departures.csv  benchmark_hybrid.json  results.json  synthetic_arrivals_s250.csv  synthetic_arrivals_s70.csv  synthetic_departures_s250.csv  synthetic_departures_s70.csv
saw_rl_pkg 2/docs/: architecture.md  decisions.md  presentation.md  status.md
saw_rl_pkg 2/logs/: evaluations.npz
saw_rl_pkg 2/logs/MaskablePPO_1/: events.out.tfevents.1775591062.Fatih-MacBook-Air.local.44124.0
saw_rl_pkg 2/logs/MaskablePPO_10/: events.out.tfevents.1775764445.192.168.1.6.13799.0
saw_rl_pkg 2/logs/MaskablePPO_11/: events.out.tfevents.1775764914.192.168.1.6.14482.0
saw_rl_pkg 2/logs/MaskablePPO_12/: events.out.tfevents.1775765403.192.168.1.6.15014.0
saw_rl_pkg 2/logs/MaskablePPO_13/: events.out.tfevents.1775765820.192.168.1.6.15517.0
saw_rl_pkg 2/logs/MaskablePPO_14/: events.out.tfevents.1775766442.192.168.1.6.16080.0
saw_rl_pkg 2/logs/MaskablePPO_15/: events.out.tfevents.1775766825.192.168.1.6.16620.0
saw_rl_pkg 2/logs/MaskablePPO_16/: events.out.tfevents.1775768524.192.168.1.6.18117.0
saw_rl_pkg 2/logs/MaskablePPO_17/: events.out.tfevents.1775769048.192.168.1.6.18906.0
saw_rl_pkg 2/models/: vec_normalize.pkl
saw_rl_pkg 2/saw_rl/: constants.py
saw_rl_pkg 2/saw_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
saw_rl_pkg 2/saw_rl/rl/: train.py  (+1 more)
(+80 files in other folders)
